--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_about_us">AboutUS</string>
+    <string name="title_activity_filter">FilterActivity</string>
 
 </resources>
